fix z-index of nav-bar

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -9,6 +9,7 @@
     width:100%;
     padding-block: 10px;
     padding-inline: 10px;
+    z-index: 1000;
   }
   
   a{
